update business scope

--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
           href="https://www.youtube.com/@mbrjfs"
           target="_blank"
           class="d-inline-flex align-items-center text-decoration-none youtube-link"
+          style="cursor: pointer"
         >
           <img
             src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg"
             alt="YouTube Logo"
             class="youtube-logo"
           />
-          订阅频道 @mbrjfs
+          <span class="fw-bold ms-2 text-decoration-underline"
+            >订阅频道 @mbrjfs</span
+          >
         </a>
       </p>
 
@@ -72,15 +75,7 @@
       <div id="services" class="section-title">专业服务</div>
       <p>
         <strong>1. 个人服务：</strong><br />
-        阳宅选址、别墅布局设计、墓地选址、个人流年分析、化解灾煞等风水服务。
-      </p>
-      <p>
-        <strong>2. 商企服务：</strong><br />
-        店铺风水、公司风水设计与调整、商标八字命名、外局景观风水设计，风水培训与咨询等。
-      </p>
-      <p>
-        <strong>3. 重要仪式指导：</strong><br />
-        乔迁、开张、开业、安床、动土等择日择时与风水指导。
+        阳宅选址、别墅布局设计、个人流年分析、化解灾煞等风水服务。
       </p>
 
       <div id="contact" class="section-title">联系方式</div>
