--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">明白人讲风水</a>
+        <a class="navbar-brand d-flex align-items-center" href="#">
+          <img src="resources/logo.png" alt="Logo" class="me-2 logo" />
+          <span class="fs-5">明白人讲风水</span>
+        </a>
         <button
           class="navbar-toggler"
           type="button"
